flytt opprettelse og besluttelse av delutbetalinger til nytt api
