# mulighetsrommet-api/src/main/kotlin/no/nav/mulighetsrommet/api/utbetaling/api/UtbetalingDetaljerDto.kt
@@ -4,6 +4,7 @@ import kotlinx.serialization.Serializable
 import no.nav.mulighetsrommet.api.tilsagn.api.TilsagnDto
 import no.nav.mulighetsrommet.api.totrinnskontroll.api.TotrinnskontrollDto
 import no.nav.mulighetsrommet.api.utbetaling.model.DelutbetalingStatus
+import no.nav.mulighetsrommet.model.DataElement
 import no.nav.mulighetsrommet.serializers.UUIDSerializer
 import java.util.*
 
@@ -24,18 +25,37 @@ data class UtbetalingLinje(
     @Serializable(with = UUIDSerializer::class)
     val id: UUID,
     val tilsagn: TilsagnDto,
-    val status: DelutbetalingStatus?,
+    val status: DelutbetalingStatusDto?,
     val belop: Int,
     val gjorOppTilsagn: Boolean,
     val opprettelse: TotrinnskontrollDto?,
 )
 
-fun toReadableName(delutbetalingStatus: DelutbetalingStatus): String {
-    return when (delutbetalingStatus) {
-        DelutbetalingStatus.TIL_ATTESTERING -> "Til godkjenning"
-        DelutbetalingStatus.GODKJENT -> "Godkjent"
-        DelutbetalingStatus.RETURNERT -> "Returnert"
-        DelutbetalingStatus.UTBETALT -> "Utbetalt"
-        DelutbetalingStatus.OVERFORT_TIL_UTBETALING -> "Overført til utbetaling"
+@Serializable
+data class DelutbetalingStatusDto(
+    val type: DelutbetalingStatus,
+    val status: DataElement.Status,
+) {
+    companion object {
+        fun fromDelutbetalingStatus(status: DelutbetalingStatus): DelutbetalingStatusDto {
+            return DelutbetalingStatusDto(
+                type = status,
+                status = DataElement.Status(
+                    value = status.beskrivelse,
+                    when (status) {
+                        DelutbetalingStatus.GODKJENT,
+                        DelutbetalingStatus.UTBETALT,
+                        DelutbetalingStatus.OVERFORT_TIL_UTBETALING,
+                        -> DataElement.Status.Variant.SUCCESS
+
+                        DelutbetalingStatus.TIL_ATTESTERING,
+                        -> DataElement.Status.Variant.WARNING
+
+                        DelutbetalingStatus.RETURNERT,
+                        -> DataElement.Status.Variant.ERROR
+                    },
+                ),
+            )
+        }
     }
 }
